# alloy

./: .gitignore  CLAUDE.md  README.md  alloy-logo-debug.txt  anvil  build.gradle.kts  mod_conversion.md  settings.gradle.kts
.github/workflows/: release.yml
alloy-api/: build.gradle.kts
alloy-client/: build.gradle.kts
alloy-core/: build.gradle.kts
alloy-griefprevention/: build.gradle.kts
alloy-ide/: .gitignore  CLAUDE.md  index.html  package.json  tsconfig.json  vite.config.ts
alloy-ide/src/: App.tsx  index.css
alloy-ide/src-tauri/: Cargo.toml  tauri.conf.json
alloy-ide/src-tauri/capabilities/: default.json
alloy-ide/src-tauri/icons/: icon.icns
alloy-ide/src-tauri/src/: lib.rs  main.rs  state.rs
alloy-ide/src-tauri/src/commands/: ai.rs  assets.rs  block.rs  build.rs  filesystem.rs  gui.rs  lsp.rs  mod.rs  modpack.rs  project.rs  terminal.rs  watcher.rs  workspace.rs
alloy-ide/src-tauri/src/lsp/: manager.rs  transport.rs
alloy-ide/src-tauri/src/mcp/: claude.rs  mod.rs  server.rs  tools.rs  types.rs
alloy-ide/src/lib/: ansi.tsx  environment.ts  lsp.ts  store.ts  templates.ts  types.ts
alloy-ide/src/pages/: EditorPage.tsx  WelcomePage.tsx
alloy-launcher/: CLAUDE.md  index.html  package.json  vite.config.ts
alloy-launcher/src/: App.tsx  index.css  main.tsx
alloy-launcher/src-tauri/: Cargo.toml  tauri.conf.json
alloy-launcher/src-tauri/capabilities/: default.json
alloy-launcher/src-tauri/icons/: icon.icns
alloy-launcher/src-tauri/src/: lib.rs  main.rs  state.rs
alloy-launcher/src-tauri/src/auth/: microsoft.rs  minecraft.rs  mod.rs  tokens.rs  xbox.rs
alloy-launcher/src-tauri/src/commands/: auth_commands.rs  launch_commands.rs  mod.rs  settings_commands.rs
alloy-launcher/src/lib/: store.ts  types.ts
alloy-loader/: build.gradle.kts
alloy-mappings/: build.gradle.kts
alloy-mcp/: Cargo.toml
alloy-mcp/resources/: alloy_api_reference.md
alloy-mcp/src/: main.rs  server.rs  state.rs  types.rs
alloy-mcp/src/tools/: animation.rs  block.rs  build.rs  editor.rs  filesystem.rs  git.rs  gui.rs  lsp.rs  mod.rs  modpack.rs  project.rs  resources.rs  terminal.rs
docs/: mc-mappings-1.21.11.md
(+315 files in other folders)
