[package]
name = "alloy-ide"
version = "0.1.0"
edition = "2021"

[lib]
name = "alloy_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "process", "io-std"] }
walkdir = "2"
thiserror = "2"
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
portable-pty = "0.8"
regex = "1"
toml = "0.8"
notify = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }
