[package]
name = "alloy-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "alloy_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"] }
keyring = { version = "3", features = [] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
url = "2"
open = "5"
zip = "2"
log = "0.4"
